Refactor DTOs and service classes to improve code consistency and readability